--- a/k3os/k3os-02-init.yaml
+++ b/k3os/k3os-02-init.yaml
@@ -1,21 +1,9 @@
 ssh_authorized_keys:
   - github:Aurelian-Shuttleworth
-write_files:
-  - encoding: ""
-    content: |-
-      #!/bin/bash
-      echo hello, local service start
-    owner: root
-    path: /etc/local.d/example.start
-    permissions: '0755'
 hostname: k3os-02
-run_cmd:
-  - "echo hello, run command"
-boot_cmd:
-  - "echo hi from boot time && echo bye from boot time"
-init_cmd:
-  - "echo hi on init && echo bye on init"
 k3os:
+  server_url: https://k3os01.shuttleworth.tech:6443
+  token: 8qac9e2qtnt6kc2aR49D
   dns_nameservers:
     - 10.0.140.1
     - 8.8.8.8
@@ -23,10 +11,3 @@ k3os:
   ntp_servers:
     - 0.us.pool.ntp.org
     - 1.us.pool.ntp.org
-  k3s_args:
-    - server
-    - "--token"
-    - "8qac9e2qtnt6kc2aR49D"
-    - "--server"
-    - "https://k3os01.shuttleworth.tech:6443"
-    - "--no-deploy=traefik"
