--- a/k3os/k3os-01-init.yaml
+++ b/k3os/k3os-01-init.yaml
@@ -1,20 +1,5 @@
 ssh_authorized_keys:
   - github:Aurelian-Shuttleworth
-write_files:
-  - encoding: ""
-    content: |-
-      #!/bin/bash
-      echo hello, local service start
-    owner: root
-    path: /etc/local.d/example.start
-    permissions: '0755'
-hostname: k3os-01
-run_cmd:
-  - "echo hello, run command"
-boot_cmd:
-  - "echo hi from boot time && echo bye from boot time"
-init_cmd:
-  - "echo hi on init && echo bye on init"
 k3os:
   token: 8qac9e2qtnt6kc2aR49D
   dns_nameservers:
@@ -26,4 +11,5 @@ k3os:
     - 1.us.pool.ntp.org
   k3s_args:
     - server
+    - "--cluster-init"
     - "--no-deploy=traefik"
